@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -19,12 +18,13 @@
 	<description>API Rest da aplicação FlyFlix</description>
 
 	<properties>
-		<java.version>21</java.version> <!-- Certifique-se de que a versão seja compatível -->
+		<java.version>17</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
-    	<dependencies>
-		<!-- Spring Boot Core -->
+
+	<dependencies>
+		<!-- Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -32,12 +32,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
 		</dependency>
 
 		<!-- Segurança -->
@@ -55,7 +49,7 @@
 			<version>4.3.0</version>
 		</dependency>
 
-		<!-- JPA e Banco de Dados -->
+		<!-- JPA e Banco -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -66,8 +60,13 @@
 			<version>8.0.33</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.5.0</version>
+		</dependency>
 
-		<!-- Migração de banco com Flyway -->
+		<!-- Flyway -->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
@@ -79,38 +78,26 @@
 			<version>9.16.0</version>
 		</dependency>
 
-		<!-- PDF -->
+		<!-- iText PDF -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>kernel</artifactId>
+			<version>8.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>layout</artifactId>
+			<version>8.0.0</version>
+		</dependency>
 
-			<!-- iText 7 Core e Layout -->
-			<dependency>
-				<groupId>com.itextpdf</groupId>
-				<artifactId>kernel</artifactId>
-				<version>8.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>com.itextpdf</groupId>
-				<artifactId>layout</artifactId>
-				<version>8.0.0</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.postgresql</groupId>
-				<artifactId>postgresql</artifactId>
-				<version>42.5.0</version> <!-- ou a versão mais recente compatível -->
-			</dependency>
-
-
-
-
-
-			<!-- Armazenamento (MinIO) -->
+		<!-- MinIO -->
 		<dependency>
 			<groupId>io.minio</groupId>
 			<artifactId>minio</artifactId>
 			<version>8.5.9</version>
 		</dependency>
 
-		<!-- Documentação com OpenAPI -->
+		<!-- OpenAPI -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -129,7 +116,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
-			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Testes -->
@@ -139,7 +126,6 @@
 			<version>3.1.0</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -156,20 +142,24 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Micrometer (Observabilidade) -->
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-core</artifactId>
-			<version>1.12.0</version> <!-- Use latest version -->
+			<version>1.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-observation</artifactId>
 			<version>1.12.0</version>
 		</dependency>
+
+		<!-- Hibernate específico -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>6.4.0.Final</version> <!-- or later -->
+			<version>6.4.0.Final</version>
 			<exclusions>
 				<exclusion>
 					<groupId>net.bytebuddy</groupId>
@@ -183,37 +173,33 @@
 			<version>1.14.12</version>
 			<scope>runtime</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
-		<finalName>flyflix</finalName> <!-- Nome do arquivo JAR gerado -->
+		<finalName>flyflix</finalName>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<outputDirectory>${project.build.directory}</outputDirectory> <!-- Diretório de saída correto -->
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-
+			<!-- Compilador Java -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>21</source> <!-- Versão do Java -->
-					<target>21</target> <!-- Versão do Java -->
-					<compilerArgs>--enable-preview</compilerArgs> <!-- Configuração de preview, se necessário -->
+					<source>17</source>
+					<target>17</target>
 				</configuration>
+			</plugin>
+
+			<!-- Spring Boot Build -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
